# deploy-vercel

./: README.md  pyproject.toml  setup.py
.pytest_cache/v/cache/: nodeids
deploy_vercel/: __init__.py  core.py
tests/: test_deploy_vercel.py
